--- a/package.json
+++ b/package.json
@@ -1,84 +1,91 @@
 {
-  "name": "koa-vue-webpack-ssr",
-  "version": "1.0.0",
-  "main": "server/index.js",
-  "author": "",
-  "license": "MIT",
+  "name": "zhenglv",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "node server/index",
-    "build": "rimraf dist && npm run build:client && npm run build:server",
-    "build:client": "webpack --config build/webpack.prod.conf.js",
-    "build:server": "webpack --config build/webpack.server.conf.js",
-    "start": "cross-env NODE_ENV=production node server/index.js",
-    "lint": "eslint --ext .js,.vue src"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "build:client": "vue-cli-service build",
+    "build:mac": "npm run build:server && mv dist/vue-ssr-server-bundle.json bundle && npm run build:client && mv bundle dist/vue-ssr-server-bundle.json",
+    "build:server": "cross-env NODE_ENV=production WEBPACK_TARGET=node vue-cli-service build",
+    "build:win": "npm run build:server && move dist\\vue-ssr-server-bundle.json bundle && npm run build:client && move bundle dist\\vue-ssr-server-bundle.json && cross-env WEBPACK_TARGET=node NODE_ENV=production node ./server/ssr.js",
+    "dev": "concurrently \"npm run serve\" \"npm run dev:serve\" ",
+    "dev:serve": "cross-env WEBPACK_TARGET=node node ./server/ssr.js",
+    "start": "cross-env NODE_ENV=production node ./server/ssr.js"
+  },
+  "dependencies": {
+    "core-js": "^3.6.4",
+    "cross-env": "^7.0.2",
+    "koa": "^2.11.0",
+    "koa-connect-history-api-fallback": "^0.3.1",
+    "koa-mount": "^4.0.0",
+    "koa-router": "^8.0.8",
+    "koa-send": "^5.0.0",
+    "koa-static": "^5.0.0",
+    "koa2-cors": "^2.0.6",
+    "koa2-proxy-middleware": "0.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
-    "autoprefixer": "^9.1.5",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.2",
-    "babel-preset-es2015": "^6.24.1",
+    "vuex": "^3.1.3",
+    "vuex-router-sync": "^5.0.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.1.6",
+    "view-design": "^4.2.0",
+    "moment": "^2.24.0",
+    "axios": "^0.19.2",
+    "@tinymce/tinymce-vue": "^3.2.0",
+    "@vue/cli-plugin-babel": "~4.3.0",
+    "@vue/cli-plugin-eslint": "~4.3.0",
+    "@vue/cli-plugin-router": "~4.3.0",
+    "@vue/cli-plugin-vuex": "~4.3.0",
+    "@vue/cli-service": "^4.3.1",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "babel-eslint": "^10.1.0",
     "concurrently": "^5.1.0",
-    "cross-env": "^5.2.0",
-    "css-loader": "^1.0.0",
-    "cssnano": "^4.1.3",
-    "eslint": "^5.6.1",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-html": "^4.0.6",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "file-loader": "^2.0.0",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "koa-webpack-dev-middleware": "^2.0.2",
-    "koa-webpack-hot-middleware": "^1.0.3",
+    "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-vue": "^6.2.2",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "lodash.merge": "^4.6.2",
-    "memory-fs": "^0.4.1",
-    "mini-css-extract-plugin": "^0.4.4",
-    "node-notifier": "^5.2.1",
+    "memory-fs": "^0.5.0",
     "node-sass": "^4.13.1",
-    "postcss-import": "^12.0.0",
-    "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.0.6",
     "prettier": "^1.19.1",
-    "rimraf": "^2.6.2",
     "sass-loader": "^8.0.2",
-    "style-loader": "^0.23.0",
-    "stylus": "^0.54.5",
+    "style-resources-loader": "^1.3.2",
+    "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
-    "url-loader": "^1.1.1",
-    "vue-loader": "^15.4.2",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.5.17",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.9",
-    "webpack-merge": "^4.1.4",
+    "vue-cli-plugin-style-resources-loader": "~0.1.4",
+    "vue-server-renderer": "^2.6.11",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.42.1",
     "webpack-node-externals": "^1.7.2"
   },
-  "dependencies": {
-    "@tinymce/tinymce-vue": "^3.2.0",
-    "axios": "^0.19.2",
-    "core-js": "^3.6.4",
-    "koa": "^2.5.3",
-    "koa-mount": "^4.0.0",
-    "koa-router": "^7.4.0",
-    "koa-send": "^5.0.0",
-    "koa-static": "^5.0.0",
-    "moment": "^2.24.0",
-    "view-design": "^4.2.0",
-    "vue": "^2.5.17",
-    "vue-router": "^3.0.1",
-    "vue-server-renderer": "^2.5.17",
-    "vuex": "^3.0.1",
-    "vuex-router-sync": "^5.0.0"
-  }
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended",
+      "@vue/prettier"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {
+      "semi": [
+        0
+      ],
+      "space-before-function-paren": 0,
+      "prettier.singleQuote": 0
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
