--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "build:mac": "npm run build:server && mv dist/vue-ssr-server-bundle.json bundle && npm run build:client && mv bundle dist/vue-ssr-server-bundle.json",
     "build:server": "cross-env NODE_ENV=production WEBPACK_TARGET=node vue-cli-service build",
     "build:win": "npm run build:server && move dist\\vue-ssr-server-bundle.json bundle && npm run build:client && move bundle dist\\vue-ssr-server-bundle.json && cross-env WEBPACK_TARGET=node NODE_ENV=production node ./server/ssr.js",
+    "build:build": "npm run build:server && move dist\\vue-ssr-server-bundle.json bundle && npm run build:client && move bundle dist\\vue-ssr-server-bundle.json",
     "dev": "concurrently \"npm run serve\" \"npm run dev:serve\" ",
     "dev:serve": "cross-env WEBPACK_TARGET=node node ./server/ssr.js",
-    "start": "cross-env NODE_ENV=production node ./server/ssr.js"
+    "start": "cross-env NODE_ENV=production pm2 start ./server/ssr.js",
+    "dev:start": "cross-env NODE_ENV=production nodemon ./server/ssr.js"
   },
   "dependencies": {
     "core-js": "^3.6.4",
@@ -27,13 +29,7 @@
     "koa2-proxy-middleware": "0.0.4"
   },
   "devDependencies": {
-    "vuex": "^3.1.3",
-    "vuex-router-sync": "^5.0.0",
-    "vue": "^2.6.11",
-    "vue-router": "^3.1.6",
-    "view-design": "^4.2.0",
-    "moment": "^2.24.0",
-    "axios": "^0.19.2",
+    "@stroll/drag": "0.0.1",
     "@tinymce/tinymce-vue": "^3.2.0",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
@@ -41,24 +37,27 @@
     "@vue/cli-plugin-vuex": "~4.3.0",
     "@vue/cli-service": "^4.3.1",
     "@vue/eslint-config-prettier": "^6.0.0",
+    "axios": "^0.19.2",
     "babel-eslint": "^10.1.0",
     "concurrently": "^5.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^6.2.2",
-    "less": "^3.0.4",
-    "less-loader": "^5.0.0",
     "lodash.merge": "^4.6.2",
     "memory-fs": "^0.5.0",
-    "node-sass": "^4.13.1",
+    "moment": "^2.24.0",
     "prettier": "^1.19.1",
-    "sass-loader": "^8.0.2",
     "style-resources-loader": "^1.3.2",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
+    "view-design": "^4.2.0",
+    "vue": "^2.6.11",
     "vue-cli-plugin-style-resources-loader": "~0.1.4",
+    "vue-router": "^3.1.6",
     "vue-server-renderer": "^2.6.11",
     "vue-template-compiler": "^2.6.11",
+    "vuex": "^3.1.3",
+    "vuex-router-sync": "^5.0.0",
     "webpack": "^4.42.1",
     "webpack-node-externals": "^1.7.2"
   },
