--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
   "eslintConfig": {
     "root": true,
     "env": {
-      "node": true
+      "es6": true,
+      "node": true,
+      "browser": true
     },
     "extends": [
       "plugin:vue/essential",
@@ -75,11 +77,9 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "semi": [
-        0
-      ],
       "space-before-function-paren": 0,
-      "prettier.singleQuote": 0
+      "prettier.singleQuote": 0,
+      "semi": 0
     }
   },
   "browserslist": [
