--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "view-design": "^4.2.0",
     "vue": "^2.6.11",
     "vue-cli-plugin-style-resources-loader": "~0.1.4",
+    "vue-cli-plugin-webpack-bundle-analyzer": "^2.0.0",
     "vue-router": "^3.1.6",
     "vue-server-renderer": "^2.6.11",
     "vue-template-compiler": "^2.6.11",
