--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev": "concurrently \"npm run serve\" \"npm run dev:serve\" ",
     "dev:serve": "cross-env WEBPACK_TARGET=node node ./server/ssr.js",
     "start": "cross-env NODE_ENV=production pm2 start ./server/ssr.js",
-    "dev:start": "cross-env NODE_ENV=production nodemon ./server/ssr.js"
+    "dev:start": "cross-env WEBPACK_TARGET=node nodemon ./server/ssr.js"
   },
   "dependencies": {
     "@stroll/tools": "0.0.6",
@@ -28,7 +28,7 @@
     "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
     "koa2-proxy-middleware": "0.0.4",
-    "md5": "^2.2.1"
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@tinymce/tinymce-vue": "^3.2.0",
