--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "dev:start": "cross-env NODE_ENV=production nodemon ./server/ssr.js"
   },
   "dependencies": {
-    "@stroll/tools": "0.0.6",
     "core-js": "^3.6.4",
     "cross-env": "^7.0.2",
     "koa": "^2.11.0",
@@ -27,10 +26,10 @@
     "koa-send": "^5.0.0",
     "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
-    "koa2-proxy-middleware": "0.0.4",
-    "md5": "^2.2.1"
+    "koa2-proxy-middleware": "0.0.4"
   },
   "devDependencies": {
+    "@stroll/tools": "0.0.6",
     "@tinymce/tinymce-vue": "^3.2.0",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
